la til my training siden

--- a/friends.html
+++ b/friends.html
@@ -51,6 +51,7 @@
 
         <!-- Footer Options -->
         <div class="footer">
+            <a href="mytraining.html"><button>my training</button></a>
             <a href="index.html"><button>Home</button></a>
             <a href="stats.html"><button>Stats</button></a>
             <a href="mypage.html"><button>My Page</button></a>
