--- a/index.html
+++ b/index.html
@@ -3,45 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fitness ai</title>
+    <title>Fitness AI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <div class="container">
+    <div class="container">
+        <!-- Header Section -->
         <div class="header">
             <h1>John Doe</h1>
-            <h2>lvl 5</h2>
-            <div class="progress" style="height: 20px;">
-                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60% to Level 6</div>
-            </div>
-        </div>       
-
-        <div class="display">
-            <div class="person_info">
-                <p>Age: 27</p>
-                <p>Weight: 80kg</p>
-                <p>Height: 1.8m</p>
-                <p>gender: male</p>
-                <p>time spent Training</p>
-            </div>
-            <div class="picture">
-                <img src="physique.webp" alt="">
-            </div>
-            <div class="strengths">
-                <p>strongest Exercise: Bench Press</p>
-                <p>strongest muscle group: Chest</p>
-                <p>most trained muscle group: back</p>
+            <h2>Level 5</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 60%;">60% to Level 6</div>
             </div>
         </div>
 
+        <!-- Stats and Picture Section -->
+        <div class="stats-display">
+            <div class="stats-box">
+                <h3>Stats</h3>
+                <p><strong>Cardio:</strong> 30</p>
+                <p><strong>Mobility:</strong> 40</p>
+                <p><strong>Speed:</strong> 30</p>
+            </div>
+            <div class="profile-picture">
+                <img src="physique.webp" alt="Profile Picture">
+            </div>
+            <div class="stats-box">
+                <h3>Strengths</h3>
+                <p><strong>Weakest Muscle:</strong> 30</p>
+                <p><strong>Strongest Muscle:</strong> 60</p>
+                <p><strong>Discipline:</strong> 20</p>
+            </div>
+        </div>
 
+        <!-- Navigation Section -->
         <div class="footer">
+            <a href="mytraining.html"><button>my training</button></a>
             <a href="friends.html"><button>Friends</button></a>
             <a href="stats.html"><button>Stats</button></a>
             <a href="mypage.html"><button>My Page</button></a>
-        </div> 
-    
-
+        </div>
     </div>
 </body>
 </html>
