--- a/mypage.html
+++ b/mypage.html
@@ -71,6 +71,7 @@
             <li class="list-group-item">Run 10km under 45 minutes <span class="badge bg-warning">30% Complete</span></li>
         </ul>
         <div class="footer">
+            <a href="mytraining.html"><button>my training</button></a>
             <a href="index.html"><button>Home</button></a>
             <a href="friends.html"><button>Friends</button></a>
             <a href="stats.html"><button>Stats</button></a>
