--- a/stats.html
+++ b/stats.html
@@ -72,6 +72,7 @@
 
         <!-- Footer Options -->
         <div class="footer">
+            <a href="mytraining.html"><button>my training</button></a>
             <a href="index.html"><button>Home</button></a>
             <a href="friends.html"><button>Friends</button></a>
             <a href="mypage.html"><button>My Page</button></a>
