forandra på statsa på home siden

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <div class="stats-box">
                 <h3>Stats</h3>
                 <p><strong>Cardio:</strong> 30</p>
-                <p><strong>Mobility:</strong> 40</p>
-                <p><strong>Speed:</strong> 30</p>
+                <p><strong>Arms:</strong> 40</p>
+                <p><strong>Abs:</strong> 30</p>
             </div>
             <div class="profile-picture">
                 <img src="physique.webp" alt="Profile Picture">
             </div>
             <div class="stats-box">
                 <h3>Strengths</h3>
-                <p><strong>Weakest Muscle:</strong> 30</p>
-                <p><strong>Strongest Muscle:</strong> 60</p>
-                <p><strong>Discipline:</strong> 20</p>
+                <p><strong>Chest:</strong> 30</p>
+                <p><strong>Back:</strong> 60</p>
+                <p><strong>Legs:</strong> 20</p>
             </div>
         </div>
 
